# yag

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: CodeCoverage.cmake  CompilerSettings.cmake  ConfigureOptions.cmake  CoverageSettings.cmake  CreateOptions.cmake  Dependencies.cmake  GTestSettings.cmake  OpenSSLSettings.cmake
include/gostone/: buffer.h  common.h  implementations.h  provider_bio.h  provider_ctx.h  version.h
include/gostone/asn1/: asn1.h
include/gostone/ciphers/: cipher_common.h  kuznyechik_core.h  kuznyechik_defs.h  kuznyechik_funcs.h
include/gostone/decode/: decode_common.h  decode_impl.h
include/gostone/digests/: streebog_core.h
include/gostone/encode/: encdec_asn1.h  encode.h  encode_common.h  encode_impl.h  encode_params.h  encode_pubkey.h
include/gostone/kdfs/: kdf_tree12_256.h
include/gostone/keymgmt/: asymm_key.h  keymgmt.h  keymgmt_akey.h  keymgmt_impl.h  keymgmt_params.h
include/gostone/signature/: signature_impl.h
include/utilities/: name_generator.hpp  ossl_lib.hpp  ossl_param.hpp  ossl_pointers.hpp  ossl_tool.hpp
include/yag/: implementations.h  provider_bio.h  version.h  version.h.in
include/yag/ciphers/: cipher_common.h  kuznyechik_funcs.h
include/yag/digests/: streebog_core.h  streebog_defs.h
include/yag/encode/: encode_common.h  encode_params.h  encode_pubkey.h
include/yag/keymgmt/: keymgmt_akey.h  keymgmt_impl.h
provider/: CMakeLists.txt  buffer.c  provider.c  provider_bio.c  provider_ctx.c
provider/asn1/: asn1.c
provider/ciphers/: cipher_common.c  cipher_impl.c  kuznyechik_core.c  kuznyechik_defs.c  kuznyechik_funcs.c  kuznyechik_impl.c
provider/decode/: decode_common.c  decode_impl.c
provider/digests/: streebog_core.c  streebog_defs.c  streebog_prov.c
provider/encode/: asn1_params.c  encdec_asn1.c  encode_common.c  encode_impl.c  encode_params.c  encode_privkey.c  encode_pubkey.c  encode_to_text.c
provider/encode_decode/: asn1_params.c  asn1_params.h  encode_common.c  encode_key2any.c  encode_key2text.c  encode_params.c  encode_privkey.c  encode_pubkey.c  encode_to_text.c  endecoder_common.c  ossl_util.h
provider/kdfs/: kdf_impl.c  kdf_tree12_256.c
provider/keymgmt/: asymm_key.c  keymgmt.c  keymgmt_akey.c  keymgmt_check.c  keymgmt_common.c  keymgmt_gen.c  keymgmt_impl.c  keymgmt_param.c
provider/signature/: signature_core.c
src/: CMakeLists.txt  buffer.c  provider.c  provider_bio.c  provider_ctx.c
src/ciphers/: cipher_common.c  cipher_impl.c  kuznyechik_core.c  kuznyechik_defs.c  kuznyechik_funcs.c
src/digests/: streebog_core.c  streebog_defs.c  streebog_prov.c
src/encode/: encdec_asn1.c  encode_common.c  encode_impl.c  encode_params.c  encode_privkey.c  encode_pubkey.c  encode_to_text.c
src/kdfs/: kdf_impl.c  kdf_tree12_256.c
src/keymgmt/: keymgmt_akey.c  keymgmt_check.c  keymgmt_common.c  keymgmt_gen.c  keymgmt_impl.c  keymgmt_param.c
src/signature/: signature_core.c  signature_impl.c
tests/: CMakeLists.txt  digest_test.cpp  encode_decode_test.cpp  encode_test.cpp  global.cpp  global.hpp  keymgmt_test.cpp  main.cpp  signature_test.cpp
tests/kat/: CMakeLists.txt  digest_kat.cpp  digest_kat.hpp  file_parser.cpp  file_parser.hpp  kat.cpp  kat.hpp  kdf_kat.cpp  kdf_kat.hpp  main.cpp
tests/kat/data/: kat.txt
tests/unit/: CMakeLists.txt  decode_test.cpp  digest_test.cpp  encode_test.cpp  kdf_test.cpp  keymgmt_test.cpp  main.cpp  signature_test.cpp
